Удаление столбцов в таблице множества состояний

--- a/AlgorithmTuringInterface/Form1.resx
+++ b/AlgorithmTuringInterface/Form1.resx
@@ -1063,7 +1063,7 @@
     <value>2, 2, 2, 2</value>
   </data>
   <data name="QuantityStates.Size" type="System.Drawing.Size, System.Drawing">
-    <value>772, 237</value>
+    <value>772, 288</value>
   </data>
   <data name="QuantityStates.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
@@ -1083,6 +1083,54 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="открытьФайлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>186, 22</value>
+  </data>
+  <data name="открытьФайлToolStripMenuItem.Text" xml:space="preserve">
+    <value>Открыть файл</value>
+  </data>
+  <data name="создатьФайлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>186, 22</value>
+  </data>
+  <data name="создатьФайлToolStripMenuItem.Text" xml:space="preserve">
+    <value>Создать файл</value>
+  </data>
+  <data name="редактироватьФайлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>186, 22</value>
+  </data>
+  <data name="редактироватьФайлToolStripMenuItem.Text" xml:space="preserve">
+    <value>Редактировать файл</value>
+  </data>
+  <data name="FileComboBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>51, 20</value>
+  </data>
+  <data name="FileComboBox.Text" xml:space="preserve">
+    <value>Лента</value>
+  </data>
+  <data name="открытьФайлToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>186, 22</value>
+  </data>
+  <data name="открытьФайлToolStripMenuItem1.Text" xml:space="preserve">
+    <value>Открыть Файл</value>
+  </data>
+  <data name="создатьФайлToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>186, 22</value>
+  </data>
+  <data name="создатьФайлToolStripMenuItem1.Text" xml:space="preserve">
+    <value>Создать файл</value>
+  </data>
+  <data name="редактироватьФайлToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>186, 22</value>
+  </data>
+  <data name="редактироватьФайлToolStripMenuItem1.Text" xml:space="preserve">
+    <value>Редактировать файл</value>
+  </data>
+  <data name="множествоСостоянийToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>144, 20</value>
+  </data>
+  <data name="множествоСостоянийToolStripMenuItem.Text" xml:space="preserve">
+    <value>Множество состояний</value>
+  </data>
   <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
@@ -1109,54 +1157,6 @@
   </data>
   <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
     <value>15</value>
-  </data>
-  <data name="FileComboBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>51, 20</value>
-  </data>
-  <data name="FileComboBox.Text" xml:space="preserve">
-    <value>Лента</value>
-  </data>
-  <data name="открытьФайлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>186, 22</value>
-  </data>
-  <data name="открытьФайлToolStripMenuItem.Text" xml:space="preserve">
-    <value>Открыть файл</value>
-  </data>
-  <data name="создатьФайлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>186, 22</value>
-  </data>
-  <data name="создатьФайлToolStripMenuItem.Text" xml:space="preserve">
-    <value>Создать файл</value>
-  </data>
-  <data name="редактироватьФайлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>186, 22</value>
-  </data>
-  <data name="редактироватьФайлToolStripMenuItem.Text" xml:space="preserve">
-    <value>Редактировать файл</value>
-  </data>
-  <data name="множествоСостоянийToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>144, 20</value>
-  </data>
-  <data name="множествоСостоянийToolStripMenuItem.Text" xml:space="preserve">
-    <value>Множество состояний</value>
-  </data>
-  <data name="открытьФайлToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>186, 22</value>
-  </data>
-  <data name="открытьФайлToolStripMenuItem1.Text" xml:space="preserve">
-    <value>Открыть Файл</value>
-  </data>
-  <data name="создатьФайлToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>186, 22</value>
-  </data>
-  <data name="создатьФайлToolStripMenuItem1.Text" xml:space="preserve">
-    <value>Создать файл</value>
-  </data>
-  <data name="редактироватьФайлToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>186, 22</value>
-  </data>
-  <data name="редактироватьФайлToolStripMenuItem1.Text" xml:space="preserve">
-    <value>Редактировать файл</value>
   </data>
   <data name="StartBtn.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 10.2pt</value>
@@ -1414,7 +1414,7 @@
     <value>GrowAndShrink</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>800, 510</value>
+    <value>800, 561</value>
   </data>
   <data name="button1.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Stretch</value>
@@ -1538,6 +1538,9 @@
   </data>
   <data name="&gt;&gt;NextElement.ZOrder" xml:space="preserve">
     <value>13</value>
+  </data>
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>MachineTuring</value>
