--- a/AlgorithmTuringInterface/Properties/Resources.resx
+++ b/AlgorithmTuringInterface/Properties/Resources.resx
@@ -121,10 +121,13 @@
   <data name="w512h5121390846449right512" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\w512h5121390846449right512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="109164" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\109164.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="w512h5121390846436left512" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\w512h5121390846436left512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="109164" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\109164.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="1159633" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1159633.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
