Добавление столбца в таблицу состояний, исправление бага

--- a/AlgorithmTuringInterface/Form1.resx
+++ b/AlgorithmTuringInterface/Form1.resx
@@ -1782,8 +1782,8 @@
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="table.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Bottom, Left, Right</value>
+  <data name="table.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
   </data>
   <data name="table.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -1807,6 +1807,6 @@
     <value>table</value>
   </data>
   <data name="&gt;&gt;table.Type" xml:space="preserve">
-    <value>AlgorithmTuringInterface.Program+DoubleBufferedDataGridView, AlgorithmTuringInterface, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>System.Windows.Forms.DataGridView, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
